// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Surface component should render correctly 1`] = `
<div>
  <div
    class="Surface"
    style="background-color: rgb(255, 255, 255);"
  >
    children
  </div>
</div>
`;

exports[`Surface component should render dark background correctly 1`] = `
<div>
  <div
    class="Surface Surface--backgroundDark"
    style="background-color: rgb(22, 22, 22);"
  >
    children
  </div>
</div>
`;
